1.5.5.dev0
 * #314: Fix regression in support for PostgreSQL's "directory" dump format. Unlike other dump
   formats, the "directory" dump format does not stream directly to/from Borg.
 * #316: Fix hang when streaming a database dump to Borg with implicit duplicate source directories
   by deduplicating them first.
 * Improve documentation around the installation process. Specifically, making borgmatic commands
   runnable via the system PATH and offering a global install option.

1.5.4
 * #310: Fix legitimate database dump command errors (exit code 1) not being treated as errors by
   borgmatic.
 * For database dumps, replace the named pipe on every borgmatic run. This prevent hangs on stale
   pipes left over from previous runs.
 * Fix error handling to handle more edge cases when executing commands.

1.5.3
 * #258: Stream database dumps and restores directly to/from Borg without using any additional
   filesystem space. This feature is automatic, and works even on restores from archives made with
   previous versions of borgmatic.
 * #293: Documentation on macOS launchd permissions issues with work-around for Full Disk Access.
 * Remove "borgmatic restore --progress" flag, as it now conflicts with streaming database restores.

1.5.2
 * #301: Fix MySQL restore error on "all" database dump by excluding system tables.
 * Fix PostgreSQL restore error on "all" database dump by using "psql" for the restore instead of
   "pg_restore".

1.5.1
 * #289: Tired of looking up the latest successful archive name in order to pass it to borgmatic
   actions? Me too. Now you can specify "--archive latest" to all actions that accept an archive
   flag.
 * #290: Fix the "--stats" and "--files" flags so that they yield output at verbosity 0.
 * Reduce the default verbosity of borgmatic logs sent to Healthchecks monitoring hook. Now, it's
   warnings and errors only. You can increase the verbosity via the "--monitoring-verbosity" flag.